--- a/SPacmanUSFX-master/PPacmanUSFX/PPacmanUSFX.vcxproj
+++ b/SPacmanUSFX-master/PPacmanUSFX/PPacmanUSFX.vcxproj
@@ -100,8 +100,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\vcdls\SDL2_image\include;C:\vcdls\SDL2_ttf\include;C:\vcdls\SDL2_mixer\include;C:\vcdls\SDL2\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\vcdls\SDL2_image\lib\x64;C:\vcdls\SDL2_ttf\lib\x64;C:\vcdls\SDL2_mixer\lib\x64;C:\vcdls\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\vclibs\SDL2_image\include;C:\vclibs\SDL2_ttf\include;C:\vclibs\SDL2_mixer\include;C:\vclibs\SDL2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\vclibs\SDL2_image\lib\x64;C:\vclibs\SDL2_ttf\lib\x64;C:\vclibs\SDL2_mixer\lib\x64;C:\vclibs\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
